--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "link:../node_modules/react-dom"
   },
   "devDependencies": {
     "microbundle-crl": "^0.13.10",
